fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Territory_Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sales_rep__c</fullName>
    <description>created specifically to wave surgical scoreboard dashboard so we can join Opportunity data set to Sales, territory Quota and activties scoreboard</description>
    <formula>Opportunity_Owner_Name__c &amp; &quot; (&quot; &amp; Territory_Number__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity Owner with Territory</inlineHelpText>
    <label>Territory Sales rep</label>
    <type>Text</type>
</CustomField>