fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Territory_Update__c.field-meta.xml
<CustomField>
    <fullName>Territory_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if the Territory needs to change to match the new owner. Do not when Opportunity Owner leaves and Opportunity re-assigned to RSM, use checkbox on the Territory to update.</inlineHelpText>
    <label>Territory Update</label>
    <type>Checkbox</type>
</CustomField>