fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Top_Ten_Focus_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Top_Ten_Focus_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Polaris Product Reporting (Anesthesia).</description>
    <label>Top Ten Focus Accounts</label>
    <type>Checkbox</type>
</CustomField>