fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Trial_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Trial_Scheduled__c</fullName>
    <label>Trial Scheduled Date</label>
    <type>Date</type>
</CustomField>