fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Trial_Scheduled_Status__c.field-meta.xml
<CustomField>
    <fullName>Trial_Scheduled_Status__c</fullName>
    <label>Trial Scheduled Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled and Confirmed</fullName>
            </value>
            <value>
                <fullName>Trial Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>