fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/VAC_Meeting__c.field-meta.xml
<CustomField>
    <fullName>VAC_Meeting__c</fullName>
    <label>VAC Meeting</label>
    <type>Date</type>
</CustomField>