fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/VAC_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>VAC_Meeting_Date__c</fullName>
    <label>VAC Meeting Date</label>
    <type>Date</type>
</CustomField>