fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/VACChampionIdentified__c.field-meta.xml
<CustomField>
    <fullName>VACChampionIdentified__c</fullName>
    <label>VAC Champion Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>