fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/VACChampionPrepMeetingCompleted__c.field-meta.xml
<CustomField>
    <fullName>VACChampionPrepMeetingCompleted__c</fullName>
    <label>VAC Champion Prep Meeting Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>