fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/VACMemberCount__c.field-meta.xml
<CustomField>
    <fullName>VACMemberCount__c</fullName>
    <label>VAC Member Count</label>
    <summaryForeignKey>VAC_Member_s__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>