fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/VACSystem__c.field-meta.xml
<CustomField>
    <fullName>VACSystem__c</fullName>
    <label>VAC System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greenlight</fullName>
            </value>
            <value>
                <fullName>MedApprove</fullName>
            </value>
            <value>
                <fullName>Valio</fullName>
            </value>
            <value>
                <fullName>Lumere</fullName>
            </value>
            <value>
                <fullName>HCA</fullName>
            </value>
            <value>
                <fullName>The Resource Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>