fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Vascular_Existing_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Vascular_Existing_Revenue__c</fullName>
    <description>This value will used on upgrade opportunities, the value entered here is the existing revenue (current income) Teleflex sees on an annual basis.</description>
    <inlineHelpText>This is the current annual amount being sold into this account (Teleflex&apos;s existing revenue). This number will be deducted in reports and dashboard when view the value.</inlineHelpText>
    <label>Existing Revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>