fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Vascular_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vascular_Net_Amount__c</fullName>
    <description>This field is a formula field that calculates the difference between the opportunity amount and the existing revenue amount.</description>
    <formula>Amount  -  Vascular_Existing_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount - Existing Revenue = Net Amount</inlineHelpText>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>