fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/VendorCredentialing__c.field-meta.xml
<CustomField>
    <fullName>VendorCredentialing__c</fullName>
    <formula>TEXT(  Account.VendorCredentialing__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Credentialing</label>
    <type>Text</type>
</CustomField>