fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <description>Field brought over from Australia data integration.</description>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>