fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/Weck360Other__c.field-meta.xml
<CustomField>
    <fullName>Weck360Other__c</fullName>
    <label>Weck 360 Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>