fullSandbox11072023/force-app/main/default/objects/Opportunity/fields/willthisreplacepolymerligationSales__c.field-meta.xml
<CustomField>
    <fullName>willthisreplacepolymerligationSales__c</fullName>
    <inlineHelpText>Will this replace Polymer Ligation Sales?</inlineHelpText>
    <label>Will this replace Polymer Ligation Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>