fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Alternate_Care_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Alternate_Care_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Anesthesia Sales Process</businessProcess>
    <label>Alternate Care Opportunity</label>
</RecordType>