fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Anesthesia_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Anesthesia_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Anesthesia Sales Process</businessProcess>
    <description>Traditional Opportunity for Pipeline</description>
    <label>Anesthesia &amp; EMS Opportunity</label>
</RecordType>