fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Anesthesia_Sales_Canada.recordType-meta.xml
<RecordType>
    <fullName>Anesthesia_Sales_Canada</fullName>
    <active>false</active>
    <businessProcess>Anesthesia Sales Process</businessProcess>
    <label>Anesthesia Sales Canada</label>
</RecordType>