fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/ANZ_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>ANZ_Opportunity</fullName>
    <active>true</active>
    <businessProcess>ANZ Sales Process</businessProcess>
    <description>RecordType for Australia/New Zealand</description>
    <label>ANZ Opportunity</label>
</RecordType>