fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Brand.recordType-meta.xml
<RecordType>
    <fullName>Brand</fullName>
    <active>false</active>
    <businessProcess>Mayo sales Process</businessProcess>
    <label>Brand</label>
</RecordType>