fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Emergency_Medicine_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Emergency_Medicine_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Emergency Medicine Opportunity</businessProcess>
    <description>Trauma &amp; Emergency Medicine Growth &amp; Expansion</description>
    <label>Growth &amp; Expansion</label>
</RecordType>