fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/EMS_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>EMS_Opportunity</fullName>
    <active>false</active>
    <businessProcess>EMS Sales Process</businessProcess>
    <label>EMS Opportunity</label>
</RecordType>