fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/GPO_Extension.recordType-meta.xml
<RecordType>
    <fullName>GPO_Extension</fullName>
    <active>false</active>
    <businessProcess>National Accounts Extension</businessProcess>
    <label>GPO Extension</label>
</RecordType>