fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/GPO_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>GPO_Opportunity</fullName>
    <active>false</active>
    <businessProcess>National Accounts</businessProcess>
    <label>GPO Opportunity</label>
</RecordType>