fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/IA_Sales_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>IA_Sales_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Interventional Sales Process</businessProcess>
    <label>Interventional Sales Opportunity</label>
</RecordType>