fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/IDN_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>IDN_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Corporate Sales</businessProcess>
    <label>IDN Opportunity</label>
</RecordType>