fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Interventional_Access_Sales_Canada.recordType-meta.xml
<RecordType>
    <fullName>Interventional_Access_Sales_Canada</fullName>
    <active>false</active>
    <businessProcess>Interventional Sales Process</businessProcess>
    <label>Interventional Sales Canada</label>
</RecordType>