fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Interventional_Capital_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Interventional_Capital_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Interventional Capital Sales Process %282016 v2%29</businessProcess>
    <label>Interventional Capital Opportunity</label>
</RecordType>