fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Latin_America_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Latin_America_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Latin America Process</businessProcess>
    <label>Latin America Opportunity</label>
</RecordType>