fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Respiratory_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Respiratory_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Respiratory Sales Process</businessProcess>
    <description>Opportunity Record Type for Respiratory Users</description>
    <label>Respiratory Opportunity</label>
</RecordType>