fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Respiratory_Sales_Canada.recordType-meta.xml
<RecordType>
    <fullName>Respiratory_Sales_Canada</fullName>
    <active>false</active>
    <businessProcess>Respiratory Sales Process</businessProcess>
    <label>Respiratory Sales Canada</label>
</RecordType>