fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Specialty_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Specialty_Opportunity</fullName>
    <active>false</active>
    <businessProcess>SM Sales Process</businessProcess>
    <label>Specialty Opportunity</label>
</RecordType>