fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Surgical_Device_Bariatrics.recordType-meta.xml
<RecordType>
    <fullName>Surgical_Device_Bariatrics</fullName>
    <active>true</active>
    <businessProcess>Surgical Devices %26 Bariatrics</businessProcess>
    <description>Process for Surgical Device &amp; Bariatrics.</description>
    <label>Surgical Device &amp; Bariatrics</label>
</RecordType>