fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Surgical_Opportunity_Canada.recordType-meta.xml
<RecordType>
    <fullName>Surgical_Opportunity_Canada</fullName>
    <active>false</active>
    <businessProcess>Surgical Sales Process</businessProcess>
    <label>Surgical Opportunity Canada</label>
</RecordType>