fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Surgical_Percuvance.recordType-meta.xml
<RecordType>
    <fullName>Surgical_Percuvance</fullName>
    <active>false</active>
    <businessProcess>Teleflex Standard Sales</businessProcess>
    <label>Surgical Percuvance</label>
</RecordType>