fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Surgical_Sales_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Surgical_Sales_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Surgical Sales Process</businessProcess>
    <label>Surgical Sales Opportunity</label>
</RecordType>