fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Teleflex_Standard_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Teleflex_Standard_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Teleflex Standard Sales</businessProcess>
    <description>New Record type to support Global Pick List</description>
    <label>Teleflex Standard Opportunity</label>
</RecordType>