fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Urology_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Urology_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Anesthesia Sales Process</businessProcess>
    <label>Urology Opportunity</label>
</RecordType>