fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Vascular_Sales_Canada.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Sales_Canada</fullName>
    <active>false</active>
    <businessProcess>NA Vascular Standard Sale Process</businessProcess>
    <label>Vascular Sales Canada</label>
</RecordType>