fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Vascular_Sales_NA.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Sales_NA</fullName>
    <active>true</active>
    <businessProcess>NA Vascular Standard Sale Process</businessProcess>
    <description>Vascular Standard products</description>
    <label>Vascular Standard</label>
</RecordType>