fullSandbox11072023/force-app/main/default/objects/Opportunity/recordTypes/Vascular_Sales_NA_custom.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Sales_NA_custom</fullName>
    <active>false</active>
    <businessProcess>NA Vascular Custom Sale Process</businessProcess>
    <description>Vascular custom product Sales -ASK</description>
    <label>Vascular Custom -ASK</label>
</RecordType>