fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/NPI_is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>NPI_is_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 


ISPICKVAL(StageName, &quot;Closed Won&quot;),

 (Record_Type_Name__c = &quot;Surgical Device &amp; Bariatrics&quot;),

ISBLANK(NPI__c)
)</errorConditionFormula>
    <errorDisplayField>NPI__c</errorDisplayField>
    <errorMessage>NPI is required for Closed Won Opportunities</errorMessage>
</ValidationRule>