fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/Opportunity_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Lost_Reason</fullName>
    <active>true</active>
    <description>When the Opportunity Stage is Opportunity Lost, the Reason Opportunity Lost field is required.

Excludes Vascular Record Type they have their own rule</description>
    <errorConditionFormula>AND(
IsClosed,
NOT(IsWon),
ISPICKVAL(Reason_Opp_Lost__c ,&quot;&quot;),
 RecordType.Name != &quot;Vascular Standard&quot;,
$User.ProfileId &lt;&gt; &apos;00eE0000000j4Vk&apos;
)</errorConditionFormula>
    <errorDisplayField>Reason_Opp_Lost__c</errorDisplayField>
    <errorMessage>Please select the reason the opportunity was lost.</errorMessage>
</ValidationRule>