fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/Opportunity_Next_Step_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Next_Step_Info</fullName>
    <active>false</active>
    <description>Requires Next Step, Next Step Date, and Current Status unless the Opportunity is closed</description>
    <errorConditionFormula>AND 
(RecordType.Id =&quot;012E0000000R4Cz&quot;, (IsClosed=FALSE),
OR( 
(ISBLANK(NextStep)), 
(ISBLANK(Next_Step_Date__c)), 
(ISBLANK(Current_Status__c))))</errorConditionFormula>
    <errorMessage>Please enter the Next Step, Next Step Date, and Current Status of the Opportunity</errorMessage>
</ValidationRule>