fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/Opportunity_Won_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Won_Reason</fullName>
    <active>false</active>
    <description>When the Opportunity Stage is Opportunity Won, the Reason Opportunity Won field is required.</description>
    <errorConditionFormula>AND(
IsClosed,
IsWon,
ISPICKVAL(Reason_Opportunity_Won__c ,&quot;&quot;),
$User.ProfileId &lt;&gt; &apos;00eE0000000j4Vk&apos;
)</errorConditionFormula>
    <errorDisplayField>Reason_Opportunity_Won__c</errorDisplayField>
    <errorMessage>Please select the reason the opportunity was won.</errorMessage>
</ValidationRule>