fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/Primary_Contact_after_first_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Contact_after_first_stage</fullName>
    <active>true</active>
    <description>Primary Contact is required after probability is greater than 10% except when the stage is Closed Lost.  Does not trigger for Mayo record types.</description>
    <errorConditionFormula>AND( 
$UserRole.Name &lt;&gt; &quot;Teleflex Global IT&quot;, 
NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)), 
RecordType.Id &lt;&gt; &quot;012E0000000RVOV&quot;, 
RecordType.Id &lt;&gt; &quot;012E0000000RVOG&quot;, 
RecordType.Id &lt;&gt; &quot;0127V000000tITK&quot;,
ISBLANK( Primary_Contact__c ), 
Custom_Conversion__c = FALSE, 
Probability &gt; 0.10 
)</errorConditionFormula>
    <errorDisplayField>Primary_Contact__c</errorDisplayField>
    <errorMessage>Please enter the Primary Contact associated with this opportunity</errorMessage>
</ValidationRule>