fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/Surg_Disp_Will_replace_Poly_Amount_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Surg_Disp_Will_replace_Poly_Amount_Req</fullName>
    <active>true</active>
    <description>Surgical Disposables Will this replace Polymer Ligation Sales is required.  When POI = AE-05.  Will this replace Polymer Ligation Sales is required</description>
    <errorConditionFormula>AND(

 ISPICKVAL(Product_of_Interest_GPL__c, &quot;AE-05&quot;),

 ISPICKVAL(willthisreplacepolymerligationSales__c ,&quot;&quot;)


)</errorConditionFormula>
    <errorDisplayField>willthisreplacepolymerligationSales__c</errorDisplayField>
    <errorMessage>Please select whether or not this AE-05 Opportunity will replace Polymer Ligations</errorMessage>
</ValidationRule>