fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/Surgical_Confidence_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Surgical_Confidence_Level</fullName>
    <active>true</active>
    <description>Requires Surgical Opportunities in the US only to use 50, 75 and 100% for confidence levels.</description>
    <errorConditionFormula>AND(
    AND(
        NOT(ISPICKVAL($User.Business_Unit__c,&quot;Latin America&quot;)),
        NOT(ISPICKVAL($User.Business_Unit__c,&quot;Canada&quot;))
        ),
    OR(
        AND(
                OR(
                        ISPICKVAL(Business_Unit_GPL__c,&quot;Surgical Instruments&quot;),
                        ISPICKVAL(Business_Unit_GPL__c,&quot;Surgical Disposables&quot;)
                ),
                ISBLANK(Confidence_Rating__c)
            ),
        AND(
            OR(
                    ISPICKVAL(Business_Unit_GPL__c,&quot;Surgical Instruments&quot;),
                    ISPICKVAL(Business_Unit_GPL__c,&quot;Surgical Disposables&quot;)
                ),
            AND(   
																    Confidence_Rating__c &lt;&gt;0.50,
                    Confidence_Rating__c &lt;&gt;0.75,
                    Confidence_Rating__c &lt;&gt;1.00
                )
            )
        ),
    NOT(ISPICKVAL(StageName,&quot;Qualified Prospect&quot;)),
 
NOT(RecordType.Name =&quot;ANZ Opportunity&quot;)
)</errorConditionFormula>
    <errorMessage>You must enter a confidence rating of 50, 75, 100%.</errorMessage>
</ValidationRule>