fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/VA_Opportunity_Closed_Won_Add_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>VA_Opportunity_Closed_Won_Add_Details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IsClosed,
IsWon,
 ClosedWonAdditionalDetails__c = &quot;&quot;,
 RecordType.Name = &quot;Vascular Standard&quot;,
$User.ProfileId &lt;&gt; &apos;00eE0000000j4Vk&apos;
)</errorConditionFormula>
    <errorDisplayField>ClosedWonAdditionalDetails__c</errorDisplayField>
    <errorMessage>Please Fill in Details as to why this Opportunity was Closed Won</errorMessage>
</ValidationRule>