fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/VASC_Lost_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>VASC_Lost_Revenue</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(Type, &quot;Lost Revenue&quot;),
IsClosed = TRUE,
ISPICKVAL(StageName, &quot;Closed Won&quot;)
),
AND(
Amount &gt; 0,
ISPICKVAL(Type, &quot;Lost Revenue&quot;),
IsClosed = TRUE
)

)</errorConditionFormula>
    <errorMessage>Lost Revenue requires a Negative Amount and the &quot;Closed Lost&quot; Stage</errorMessage>
</ValidationRule>