fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/VASC_Require_Line_Items.validationRule-meta.xml
<ValidationRule>
    <fullName>VASC_Require_Line_Items</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Probability &gt; 0.20,
RecordType.Name=&quot;Vascular Standard&quot;, 
HasOpportunityLineItem = false,
$UserRole.Name &lt;&gt; &quot;Teleflex Global IT&quot;,
DATEVALUE(CreatedDate) &gt; DATE(2018, 08, 19) 
)</errorConditionFormula>
    <errorMessage>Please add products before moving to next stage. Click the &apos;Add/Edit Products&apos; button.</errorMessage>
</ValidationRule>