fullSandbox11072023/force-app/main/default/objects/Opportunity/validationRules/VASC_Trial_Date_Scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>VASC_Trial_Date_Scheduled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordTypeId = &quot;012E0000000PQUt&quot;,
AND(
ISBLANK(Trial_Scheduled__c),
TEXT(Trial_Scheduled_Status__c) != &quot;Trial Not Needed&quot;
),
 Probability &gt; 0.49,
 NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
 $UserRole.Name &lt;&gt; &quot;Teleflex Global IT&quot;,
 DATEVALUE(CreatedDate) &gt; DATE(2018, 08, 19)  
)</errorConditionFormula>
    <errorMessage>Please update either the Trial Scheduled Date or Trial Date Status if a trial is not needed.</errorMessage>
</ValidationRule>