fullSandbox11072023/force-app/main/default/objects/Opportunity/listViews/All_Interventional_Open_Opportunities1.listView-meta.xml
<ListView>
    <fullName>All_Interventional_Open_Opportunities1</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Opportunity_Owner_Name__c</columns>
    <columns>Territory_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit_GPL__c</field>
        <operation>equals</operation>
        <value>Interventional,Interventional Capital</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>AccountGPO__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Interventional Open Opportunities</label>
</ListView>