fullSandbox11072023/force-app/main/default/objects/Opportunity/listViews/All_Interventional_Sales_Opportunites.listView-meta.xml
<ListView>
    <fullName>All_Interventional_Sales_Opportunites</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit_GPL__c</field>
        <operation>equals</operation>
        <value>Interventional,Interventional Capital</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.IA_Sales_Opportunity</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>All Interventional Sales Opportunites</label>
</ListView>