fullSandbox11072023/force-app/main/default/objects/Opportunity/listViews/All_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Open_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Product_Family_GPL__c</columns>
    <columns>Product_of_Interest_GPL__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Owner_Region__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open OpportunitiesTeleflexStandardRT</label>
</ListView>