fullSandbox11072023/force-app/main/default/objects/Opportunity/listViews/All_Open_Opportunities_Anes_EMS_RT.listView-meta.xml
<ListView>
    <fullName>All_Open_Opportunities_Anes_EMS_RT</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Product_Family_GPL__c</columns>
    <columns>Product_of_Interest_GPL__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Owner_Region__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Anesthesia &amp; EMS Opportunity</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Financial Decision,Trial/Evaluation</value>
    </filters>
    <filters>
        <field>Business_Unit_GPL__c</field>
        <operation>equals</operation>
        <value>Anesthesia,Respiratory</value>
    </filters>
    <filters>
        <field>Product_Family_GPL__c</field>
        <operation>equals</operation>
        <value>Active Humidification,Aerosol Therapy,Airway,Anesthesia Capital,Filters/HMEs,Hemostatic Products,LMA,Oxygen Therapy,Pain Management,Polaris,Resuscitation,Sheaths</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>John Planchet</value>
    </filters>
    <label>All Open Opportunities Anes/EMS RT</label>
</ListView>